# childassist

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: cd.yml  ci.yml
dados/: config.json  dicionario_ptbr.json  palavras_proibidas.txt  prompts.json
dados/prompts/: bate_papo_livre.txt  boas_vindas.txt  classificador_intencao.txt  conclusao_missao.txt  corrigir_erro.txt  gerar_palavra_desafio.txt  lancar_desafio.txt  persona_professor_alfa.txt  progresso_missao.txt  sugerir_temas.txt
src/: db_sessao.rs  gerenciador_prompts.rs  lib.rs  main.rs  motor_ia.rs  nucleo.rs
src/ferramentas/: corretor.rs  mod.rs  sanitizador.rs
