[package]
name = "projeto_alfabetizacao_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "projeto_alfabetizacao_rust"

[[bin]]
name = "brinquedo_iot"
path = "src/main.rs"

[dependencies]
uniffi = { version = "0.28" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
# llama_cpp_rs = "0.3.0" # <-- Para Produção Mobile offline
reqwest = { version = "0.12", features = ["blocking", "json"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
